@@ -1,61 +1,41 @@
 package com.example.farmeasyserver.service.post;
 
 import com.example.farmeasyserver.dto.ImageDto;
-import com.example.farmeasyserver.dto.post.ImageUpdateResult;
-import com.example.farmeasyserver.dto.post.UpdatePostRequest;
+import com.example.farmeasyserver.dto.post.*;
 import com.example.farmeasyserver.dto.post.community.*;
+import com.example.farmeasyserver.dto.post.community.comment.CommentRequest;
 import com.example.farmeasyserver.dto.post.experience.*;
-import com.example.farmeasyserver.dto.post.market.ListMarketDto;
-import com.example.farmeasyserver.dto.post.CreatePostRequest;
-import com.example.farmeasyserver.dto.post.CreatePostResponse;
 import com.example.farmeasyserver.dto.mainpage.ListPostDto;
-import com.example.farmeasyserver.dto.post.market.MarketPostDto;
-import com.example.farmeasyserver.dto.post.market.MarketPostRequest;
-import com.example.farmeasyserver.dto.post.market.UpdateMarPostReq;
+import com.example.farmeasyserver.dto.post.experience.expapplication.ExpApplicationPageDto;
+import com.example.farmeasyserver.dto.post.experience.expapplication.ExpApplicationRequest;
+import com.example.farmeasyserver.dto.post.market.*;
 import com.example.farmeasyserver.entity.board.Image;
 import com.example.farmeasyserver.entity.board.Post;
-import com.example.farmeasyserver.entity.board.PostType;
-import com.example.farmeasyserver.entity.board.community.Comment;
-import com.example.farmeasyserver.entity.board.community.CommunityPost;
-import com.example.farmeasyserver.entity.board.community.CommunityType;
-import com.example.farmeasyserver.entity.board.exprience.ExpApplication;
-import com.example.farmeasyserver.entity.board.exprience.ExperiencePost;
-import com.example.farmeasyserver.entity.board.exprience.Recruitment;
-import com.example.farmeasyserver.entity.board.market.Item;
+import com.example.farmeasyserver.entity.board.community.*;
+import com.example.farmeasyserver.entity.board.exprience.*;
 import com.example.farmeasyserver.entity.board.market.MarketPost;
 import com.example.farmeasyserver.entity.user.Role;
 import com.example.farmeasyserver.entity.user.User;
 import com.example.farmeasyserver.repository.UserJpaRepo;
-import com.example.farmeasyserver.repository.post.*;
-import com.example.farmeasyserver.repository.post.community.CommentJpaRepo;
-import com.example.farmeasyserver.repository.post.community.CommunityFilter;
-import com.example.farmeasyserver.repository.post.community.CommunityRepo;
-import com.example.farmeasyserver.repository.post.community.CommunityJpaRepo;
-import com.example.farmeasyserver.repository.post.experience.ExpAppJpaRepo;
-import com.example.farmeasyserver.repository.post.experience.ExpFilter;
-import com.example.farmeasyserver.repository.post.experience.ExpRepo;
-import com.example.farmeasyserver.repository.post.experience.ExpJpaRepo;
-import com.example.farmeasyserver.repository.post.market.MarketFilter;
-import com.example.farmeasyserver.repository.post.market.MarketRepo;
-import com.example.farmeasyserver.repository.post.market.MarketJpaRepo;
+import com.example.farmeasyserver.repository.post.PostJpaRepo;
+import com.example.farmeasyserver.repository.post.community.*;
+import com.example.farmeasyserver.repository.post.experience.*;
+import com.example.farmeasyserver.repository.post.market.*;
 import com.example.farmeasyserver.service.file.FileService;
 import com.example.farmeasyserver.util.exception.user.UserException;
 import lombok.RequiredArgsConstructor;
 import org.apache.tomcat.util.http.fileupload.FileUploadException;
-import org.springframework.data.crossstore.ChangeSetPersister;
 import org.springframework.data.domain.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.nio.charset.CharacterCodingException;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
@@ -78,72 +58,66 @@ public class PostServiceImpl implements PostService{
 
     */
     @Override
-    public List<ListCommunityDto> getMainCommunityPosts() {
-        List<CommunityPost> communityPosts = communityJpaRepo.findTop5OrderByIdDesc();
-
-        return communityPosts.stream()
+    public List<ListCommunityDto> getMainCommunityPostList() {
+        List<CommunityPost> communityPostList = communityJpaRepo.findTop5OrderByIdDesc();
+        return convertToCommunityDtoList(communityPostList);
+    }
+    private List<ListCommunityDto> convertToCommunityDtoList(List<CommunityPost> postList){
+        return postList.stream()
                 .map(ListCommunityDto::toDto)
                 .toList();
     }
 
     @Override
-    public List<ListMarketDto> getMainMarketPosts() {
+    public List<ListMarketDto> getMainMarketPostList() {
         List<ListMarketDto> mainMarketPosts = marketRepo.findTop4OrderByIdDesc();
         imageMapping(mainMarketPosts); return mainMarketPosts;
     }
 
     @Override
-    public List<ListExperienceDto> getMainExperiencePosts() {
+    public List<ListExperienceDto> getMainExperiencePostList() {
         List<ListExperienceDto> mainExperiencePosts = expRepo.findTop4OrderByIdDesc();
         imageMapping(mainExperiencePosts); return mainExperiencePosts;
     }
 
     /*
 
-    게시글 작성 메소드
+    게시글 작성
 
     */
     @Override
     @Transactional
-    public CreatePostResponse createCommunityPost(CommunityPostRequest req, CommunityType type, User author) {
-        CommunityPost communityPost = createPost(new CommunityPost(type),req, author);
-        communityPost.setPostType(PostType.COMMUNITY);
+    public CreatePostResponse createCommunityPost(CommunityPostRequest req, CommunityType communityType, User author) {
+        CommunityPost communityPost = createPost(CommunityPostRequest.toEntity(communityType),req, author);
         communityJpaRepo.save(communityPost);
-        return new CreatePostResponse(communityPost.getId(),"community");
+        return new CreatePostResponse(communityPost.getId(),communityPost.getPostType());
     }
 
     @Override
     @Transactional
     public CreatePostResponse createMarketPost(MarketPostRequest req, User author) {
-        Item item = new Item(req.getItemName(),req.getPrice(), req.getGram());
-        MarketPost marketPost = createPost(new MarketPost(req.getContent(), item), req, author);
-        marketPost.setPostType(PostType.MARKET);
+        MarketPost marketPost = createPost(MarketPostRequest.toEntity(req), req, author);
         marketJpaRepo.save(marketPost);
-        return new CreatePostResponse(marketPost.getId(),"market");
+        return new CreatePostResponse(marketPost.getId(),marketPost.getPostType());
     }
 
     @Override
     @Transactional
     public CreatePostResponse createExperiencePost(ExperiencePostRequest req,User author) {
-        Recruitment recruitment = new Recruitment(
-                req.getStartDate(), req.getStartTime(), req.getRecruitmentNum(),
-                req.getDetailedRecruitmentCondition()
-        );
-        ExperiencePost experiencePost = createPost(new ExperiencePost(recruitment),req, author);
-        experiencePost.setPostType(PostType.EXPERIENCE);
+        ExperiencePost experiencePost = createPost(ExperiencePostRequest.toEntity(req),req, author);
         expJpaRepo.save(experiencePost);
-        return new CreatePostResponse(experiencePost.getId(),"experience");
+        return new CreatePostResponse(experiencePost.getId(),experiencePost.getPostType());
     }
 
     /*
 
-    게시글 작성 메소드
+    게시글 삭제
 
     */
     @Override
     @Transactional
     public Long deleteCommunityPost(Long postId, User user) {
-        CommunityPost post = communityJpaRepo.findByIdWithUser(postId).orElseThrow();
+        CommunityPost post = findCommunityPost(postId);
         deletePost(post,user);
         return postId;
     }
@@ -151,7 +125,7 @@ public class PostServiceImpl implements PostService{
     @Override
     @Transactional
     public Long deleteMarketPost(Long postId, User user) {
-        MarketPost post = marketJpaRepo.findByIdWithUser(postId).orElseThrow();
+        MarketPost post = findMarketPost(postId);
         deletePost(post,user);
         return postId;
     }
@@ -159,34 +133,39 @@ public class PostServiceImpl implements PostService{
     @Override
     @Transactional
     public Long deleteExperiencePost(Long postId, User user) {
-        ExperiencePost post = expJpaRepo.findById(postId).orElseThrow();
+        ExperiencePost post = findExperiencePost(postId);
         deletePost(post,user);
         return postId;
     }
 
     /*
 
-    게시판 게시글 조회 메소드
+    게시글 조회 메소드
 
     */
     @Override
     public CommunityPostDto readCommunityPost(Long postId){
-        return CommunityPostDto.toDto(communityJpaRepo.findByIdWithUser(postId).orElseThrow());
+        return CommunityPostDto.toDto(findCommunityPost(postId));
     }
 
     @Override
     public MarketPostDto readMarketPost(Long postId){
-        return MarketPostDto.toDto(marketJpaRepo.findByIdWithUser(postId).orElseThrow());
+        return MarketPostDto.toDto(findMarketPost(postId));
     }
 
     @Override
     public ExperiencePostDto readExperiencePost(Long postId){
-        return ExperiencePostDto.toDto(expJpaRepo.findByIdWithUser(postId).orElseThrow());
+        return ExperiencePostDto.toDto(findExperiencePost(postId));
     }
 
+    /*
+
+    게시글 수정
+
+    */
     @Override
     public CommunityPostDto updateCommunityPost(Long postId, UpdateComPostReq req, User user) {
-        CommunityPost post = communityJpaRepo.findByIdWithUser(postId).orElseThrow();
+        CommunityPost post = findCommunityPost(postId);
         updatePost(user, post, req);
         communityJpaRepo.save(post);
         return CommunityPostDto.toDto(post);
@@ -194,25 +173,25 @@ public class PostServiceImpl implements PostService{
 
     @Override
     public ExperiencePostDto updateExperiencePost(Long postId, UpdateExpPostReq req, User user) {
-        ExperiencePost post = expJpaRepo.findByIdWithUser(postId).orElseThrow();
+        ExperiencePost post = findExperiencePost(postId);
         updatePost(user, post, req);
-        post.setRecruitment(new Recruitment(req));
+        post.setRecruitment(UpdateExpPostReq.reqToRecruitment(req));
         expJpaRepo.save(post);
         return ExperiencePostDto.toDto(post);
     }
 
     @Override
     public MarketPostDto updateMarketPost(Long postId, UpdateMarPostReq req, User user) {
-        MarketPost post = marketJpaRepo.findByIdWithUser(postId).orElseThrow();
+        MarketPost post = findMarketPost(postId);
         updatePost(user, post, req);
-        post.setItem(new Item(req));
+        post.setItem(UpdateMarPostReq.reqToItem(req));
         marketJpaRepo.save(post);
         return MarketPostDto.toDto(post);
     }
 
     /*
 
-    각 게시판 게시글 리스트 조회 메소드
+    각 게시판 게시글 리스트 조회
 
     */
     @Override
@@ -236,45 +215,50 @@ public class PostServiceImpl implements PostService{
 
     /*
 
-    농촌체험 신청
+    농촌체험 신청 관련
 
     */
 
     @Override
-    public ExpApplicationPageDto experiencePage(Long postId) {
-        ExperiencePost post = expJpaRepo.findByIdWithUser(postId).orElseThrow();
+    public ExpApplicationPageDto getExpAppPage(Long postId) {
+        ExperiencePost post = findExperiencePost(postId);
         return ExpApplicationPageDto.toDto(post);
     }
     @Override
     @Transactional
-    public ExpApplicationRequest requestExperience(ExpApplicationRequest req) throws Exception {
-        ExperiencePost experiencePost = expJpaRepo.findById(req.getPostId())
-                .orElseThrow(ChangeSetPersister.NotFoundException::new);
-        // 신청 가능한 인원 확인
-        int num = experiencePost.getRecruitment().getRecruitmentNum();
-        if (num < req.getParticipants()) {
-            throw new Exception("인원이 충분하지 않습니다.");
-        }
-        // 사용자 확인
-        User applicant = userJpaRepo.findByUsernameAndPhoneNumber(req.getName(), req.getPhoneNumber())
-                .orElseThrow(CharacterCodingException::new);
-
-        ExpApplication expApplication = new ExpApplication();
-        expApplication.setApplicants(applicant);
-        expApplication.setPost(experiencePost);
-        experiencePost.getRecruitment().setRecruitmentNum(num - req.getParticipants());
-        expAppJpaRepo.save(expApplication);
+    public ExpApplicationRequest requestExpApp(Long postId, ExpApplicationRequest req, User user) throws Exception {
+        ExperiencePost experiencePost = findExperiencePost(postId);
+        validateParticipants(experiencePost, req.getParticipants());
+        User applicant = findUser(user.getId());
+        processApplication(experiencePost, applicant, req.getParticipants());
         return req;
     }
 
+    private void validateParticipants(ExperiencePost post, int participants) throws Exception {
+        int availableNum = post.getRecruitment().getRecruitmentNum();
+        if(availableNum < participants){
+            throw new Exception("인원이 초과되었습니다.");
+        }
+    }
+
+    private void processApplication(ExperiencePost post, User applicant, int participants){
+        ExpApplication expApplication = new ExpApplication(participants,applicant,post);
+        int remainingNum = post.getRecruitment().getRecruitmentNum() - participants;
+        post.getRecruitment().setRecruitmentNum(remainingNum);
+        expAppJpaRepo.save(expApplication);
+    }
+
+    /*
+
+    커뮤니티 게시글 댓글 작성
+
+    */
     @Override
     @Transactional
     public CommentRequest requestComment(Long postId, CommentRequest req, User user) {
-        CommunityPost post = communityJpaRepo.findById(postId).orElseThrow();
-        User author = userJpaRepo.findById(user.getId()).orElseThrow();
-        Comment comment = new Comment(req.getComment());
-        comment.setPost(post);
-        comment.setAuthor(author);
+        CommunityPost post = findCommunityPost(postId);
+        User author = findUser(user.getId());
+        Comment comment = new Comment(req.getComment(),post,author);
         commentJpaRepo.save(comment);
         return req;
     }
@@ -285,47 +269,54 @@ public class PostServiceImpl implements PostService{
 
     */
     private <T extends ListPostDto> void imageMapping(List<T> mainPageDto){
-        List<Long> postIdList = mainPageDto.stream()
+        List<Long> postIdList = extractPostIdList(mainPageDto);
+        List<ImageDto> postImages = fetchPostImageList(postIdList);
+        mapImageToPostList(mainPageDto,postImages);
+    }
+    private <T extends ListPostDto> List<Long> extractPostIdList(List<T> pageDto){
+        return pageDto.stream()
                 .map(T::getPostId)
-                .collect(toList());
-        List<ImageDto> postImages = postJpaRepo.findImagesDtoByPostIds(postIdList);
-        mainPageDto.forEach(p -> {
-            List<ImageDto> imageDtos = groupImagesByPostId(postImages).get(p.getPostId());
-            if (imageDtos != null && !imageDtos.isEmpty())
-                p.setImage(imageDtos.get(0));
+                .toList();
+    }
+    private List<ImageDto> fetchPostImageList(List<Long> postIdList){
+        return postJpaRepo.findImagesDtoByPostIds(postIdList);
+    }
+    private <T extends ListPostDto> void mapImageToPostList(List<T> postListDto, List<ImageDto> postImageList){
+        Map<Long, List<ImageDto>> imagesByPostId = groupImagesByPostId(postImageList);
+        postListDto.forEach(p -> {
+            List<ImageDto> imageDtoList = imagesByPostId.get(p.getPostId());
+            if (imageDtoList != null && !imageDtoList.isEmpty()) {
+                p.setImage(imageDtoList.get(0));
+            }
         });
     }
-
-    /*
-
-    게시글 작성 메소드
-
-    */
-    private <T extends Post> T createPost(T p, CreatePostRequest req, User user) {
-        User author = userJpaRepo.findByIdWithFarm(user.getId()).orElseThrow();
-        p.create(req, author);
-        uploadImages(p.getImageList(),req.getImageList());
-        return p;
-    }
-
-    private void updatePost(User user, Post post, UpdatePostRequest req){
-        if(checkUser(user,post.getAuthor().getId())){
-            ImageUpdateResult result = post.update(req);
-            deleteImages(result.getDeletedImageList());
-            uploadImages(result.getAddedImageList(),result.getAddedImageFileList());
-        }else throw new UserException("삭제할 권한이 없습니다.", HttpStatus.BAD_REQUEST);
-    }
-    /*
-
-    각 게시글 이미지 매핑
-
-    */
-    private Map<Long, List<ImageDto>> groupImagesByPostId(List<ImageDto> postImages) {
-        return postImages.stream()
+    private Map<Long, List<ImageDto>> groupImagesByPostId(List<ImageDto> postImageList) {
+        return postImageList.stream()
                 .collect(Collectors.groupingBy(ImageDto::getPostId));
     }
 
-    private void uploadImages(List<Image> images, List<MultipartFile> fileImages) {
+
+    private <T extends Post> T createPost(T p, CreatePostRequest req, User user) {
+        User author = userJpaRepo.findByIdWithFarm(user.getId()).orElseThrow();
+        p.createPostFromReq(req, author);
+        uploadImageList(p.getImageList(),req.getImageList());
+        return p;
+    }
+
+    private void deletePost(Post post, User user){
+        checkUser(user,post.getAuthor().getId());
+        deleteImageList(post.getImageList());
+        postJpaRepo.delete(post);
+    }
+
+    private void updatePost(User user, Post post, UpdatePostRequest req){
+        checkUser(user,post.getAuthor().getId());
+        ImageUpdateResult result = post.updatePostFromReq(req);
+        deleteImageList(result.getDeletedImageList());
+        uploadImageList(result.getAddedImageList(),result.getAddedImageFileList());
+    }
+
+    private void uploadImageList(List<Image> images, List<MultipartFile> fileImages) {
         IntStream.range(0, images.size()).forEach(i -> {
             try {
                 fileService.upload(fileImages.get(i), images.get(i).getUniqueName());
@@ -335,19 +326,30 @@ public class PostServiceImpl implements PostService{
         });
     }
 
-    private void deleteImages(List<Image> images){
+    private void deleteImageList(List<Image> images){
         images.stream().forEach(i -> fileService.delete(i.getUniqueName()));
     }
 
-    private void deletePost(Post post, User user){
-        if(checkUser(user,post.getAuthor().getId())){
-            deleteImages(post.getImageList());
-            postJpaRepo.delete(post);
-        }else throw new UserException("삭제할 권한이 없습니다.", HttpStatus.BAD_REQUEST);
+    private boolean isAuthorized(User user, Long authorId){
+        return user.getRole().equals(Role.ADMIN) || user.getId().equals(authorId);
     }
 
-    private boolean checkUser(User user, Long authorId){
-        return user.getRole().equals(Role.ADMIN) || user.getId().equals(authorId);
+    private void checkUser(User user, Long authorId){
+        if(!isAuthorized(user,authorId)) throw new UserException("해당 권한이 없습니다.", HttpStatus.BAD_REQUEST);
+    }
+
+
+    private CommunityPost findCommunityPost(Long postId){
+        return communityJpaRepo.findByIdWithUser(postId).orElseThrow();
+    }
+    private ExperiencePost findExperiencePost(Long postId){
+        return expJpaRepo.findByIdWithUser(postId).orElseThrow();
+    }
+    private MarketPost findMarketPost(Long postId){
+        return marketJpaRepo.findByIdWithUser(postId).orElseThrow();
+    }
+    private User findUser(Long userId){
+        return userJpaRepo.findById(userId).orElseThrow();
     }
 
 }
